--- a/index.html
+++ b/index.html
@@ -412,10 +412,17 @@
             </div>
         </div>
     </div>
+    <div class="container wow fadeIn">
+        <hr class="clear">
+        <div class="embed-responsive embed-responsive-16by9">
+           <iframe width="640" height="360" src="https://www.youtube.com/embed/B-ZSeepDmPE?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <small>Preparing for Life, a documentary on Waldorf Education</small>
+    </div>
 </section>
 
-<!-- Testomonials Section -->
-<section class="testimonials bg-gray">
+<!-- Testimonials Section -->
+<section class="testimonials">
     <div class="container wow fadeIn">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
