Update school details for class size, Spanish and looping.

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <div class="school-item featured-first">
                 <h3>Kindergarten</h3>
                 <hr class="colored">
-                <div class="price"><span class="number">16</span> pupils / class max.</div>
+                <div class="price"><span class="number">20</span> pupils / class max.</div>
                 <ul class="list-group">
                     <li class="list-group-item">Free play</li>
                     <li class="list-group-item">Circle time</li>
@@ -511,6 +511,7 @@
                     <li class="list-group-item">Artistic and domestic activities</li>
                     <li class="list-group-item">Storytelling</li>
                     <li class="list-group-item">Seasonal celebrations</li>
+                    <li class="list-group-item">Spanish-immersion option</li>
                 </ul>
                 <span>Each child is met with respect, warmth and loving care by a Waldorf-trained Teacher and an
                         Assistant</span>
@@ -530,8 +531,9 @@
                     <li class="list-group-item">Cross-disciplinary approach with block scheduling</li>
                     <li class="list-group-item">Multi-sensory and experiential learning</li>
                     <li class="list-group-item">Constant connection to nature</li>
+                    <li class="list-group-item">Regular Spanish instruction</li>
                 </ul>
-                <span>Teachers engage the whole child through a multi-year relationship (teachers move up with students through the grades).</span>
+                <span>Teachers engage the whole child through a multi-year relationship (teachers move up with students through grades 1-5 and 6-8).</span>
             </div>
         </div>
     </div>
