Edit teacher looping details.

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 </div>
                 <div class="media-body">
                     <h3 class="media-heading">Teacher Looping</h3>
-                    <p>Teachers follow their students from first grade through middle school. This allows teachers
+                    <p>Teachers follow their students from 1st - 5th and 6th - 8th grade. This allows teachers
                         to develop a stronger relationship with their students and develop a curriculum based on
                         their students’ needs and strengths.</p>
                 </div>
