Now with less salad.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Waldorf-Inspired Charter School in Boise, Idaho anticipated opening Fall 2018.">
+    <meta name="description" content="Charter School in Boise, Idaho guided by the principles of Waldorf Public Education.">
     <meta name="author" content="Brent Thomas">
 
     <title>Peace Valley Waldorf Charter School</title>
@@ -79,10 +79,10 @@
 <!-- Header -->
 <header style="background-image: url('img/home/Boise-Spring-Skyline--Copyright--FanDarwin-on-flickr.jpg');">
     <div class="intro-content">
-        <!--<img src="img/agency/profile.svg" class="img-responsive img-centered" alt="Peace Valley Logo">-->
+        <!--<img src="img/home/profile.svg" class="img-responsive img-centered" alt="Peace Valley Logo">-->
         <div class="brand-name">Peace Valley</div>
         <hr class="colored">
-        <div class="brand-name-subtext">Waldorf-Inspired Charter School</div>
+        <div class="brand-name-subtext">Charter School</div>
         <small>Anticipated Opening Fall 2018</small>
     </div>
     <div class="scroll-down">
@@ -96,10 +96,9 @@
     <div class="container-fluid">
         <div class="row text-center">
             <div class="col-md-10 col-md-offset-1 wow fadeIn">
-                <h1>Waldorf Education in Boise</h1>
-                <p>Peace Valley Charter School has answered the constant call from families within the Treasure Valley
-                    to provide a free public school education inspired and guided by the principles of Waldorf Public
-                    Education.</p>
+                <h1>Arts and Nature Education in Boise</h1>
+                <p>Peace Valley Charter School has answered the call from families within the Treasure Valley
+                    for a free public school guided by the Core Principles of the Alliance for Public Waldorf Education.</p>
                     <a href="http://allianceforpublicwaldorfeducation.org" title="Member of the Alliance for Public Waldorf Education"><img src="img/home/Alliance-for-Public-Waldorf-Education.png" alt="Member of the Alliance for Public Waldorf Education"/></a>
                 <hr class="colored">
             </div>
