--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
     <link href="vendor/formstone/background.css" rel="stylesheet" type="text/css">
     <link href="vendor/animate.css/animate.min.css" rel="stylesheet" type="text/css">
-    <link href="vendor/device-mockups/device-mockups.min.css" rel="stylesheet" type="text/css">
 
     <link href="css/valley.css" rel="stylesheet" type="text/css">
 
@@ -47,7 +46,7 @@
                 <i class="fa fa-bars"></i> Menu
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                <!--<img src="img/agency/logo.svg" class="img-responsive" alt="Peace Valley Logo">-->
+                <!--<img src="img/text.svg" class="img-responsive" alt="Peace Valley">-->
                 Peace Valley
             </a>
         </div>
@@ -66,7 +65,7 @@
                     <a class="page-scroll" href="#waldorf">Why Waldorf?</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#pricing">School</a>
+                    <a class="page-scroll" href="#parents">Prospective Parents</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
@@ -79,7 +78,7 @@
 <!-- Header -->
 <header style="background-image: url('img/home/Boise-Spring-Skyline--Copyright--FanDarwin-on-flickr.jpg');">
     <div class="intro-content">
-        <!--<img src="img/home/profile.svg" class="img-responsive img-centered" alt="Peace Valley Logo">-->
+        <!--<img src="img/logo.svg" class="img-responsive img-centered" alt="Peace Valley Logo">-->
         <div class="brand-name">Peace Valley</div>
         <hr class="colored">
         <div class="brand-name-subtext">Charter School</div>
@@ -484,11 +483,11 @@
 </section>
 
 <!-- School Section -->
-<section id="school" class="school" style="background-image: url('img/home/Trail-by-Brent-Thomas.jpg')">
+<section id="parents" class="school" style="background-image: url('img/home/Trail-by-Brent-Thomas.jpg')">
     <div class="container wow fadeIn">
         <div class="row text-center">
             <div class="col-lg-12">
-                <h2>Our School</h2>
+                <h2>Prospective Parents</h2>
                 <hr class="colored">
                 <p>Peace Valley Charter School is anticipated to open as a free public school in the autumn of 2018.
                     We will initially be offering enrollment in grades K-5. Additional middle school grades will be
