The price is wrong.

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <div class="school-item featured-first">
                 <h3>Kindergarten</h3>
                 <hr class="colored">
-                <div class="price"><span class="number">20</span> pupils / class max.</div>
+                <div class="pupils"><span class="number">20</span> pupils / class max.</div>
                 <ul class="list-group">
                     <li class="list-group-item">Free play</li>
                     <li class="list-group-item">Circle time</li>
@@ -519,7 +519,7 @@
             <div class="school-item featured">
                 <h3>Grades 1 - 8</h3>
                 <hr class="colored">
-                <div class="price"><span class="number">25</span> pupils / class max.</div>
+                <div class="pupils"><span class="number">25</span> pupils / class max.</div>
                 <ul class="list-group">
                     <li class="list-group-item">A developmentally-based curriculum (When a subject is taught is just as
                         important as what is taught.)
@@ -650,7 +650,7 @@
             </div>
             <div class="col-md-4 contact-details">
                 <h4><i class="fa fa-envelope"></i> Email</h4>
-                <p><a href="mailto:info@peacevalleycharter.org">info@peacevalleycharter@.org</a>
+                <p><a href="mailto:info@peacevalleycharter.org">info@peacevalleycharter.org</a>
                 </p>
             </div>
         </div>
