Abandon navbar logo for now.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <i class="fa fa-bars"></i> Menu
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                <img src="img/logo_text.png" class="img-responsive" alt="Peace Valley">
+                <!--<img src="img/logo_text.png" class="img-responsive" alt="Peace Valley">-->
+                Peace Valley
             </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
