--- a/index.html
+++ b/index.html
@@ -117,17 +117,16 @@
                     <h3>Whole Child Education</h3>
                     <p>Each child is seen as an individual, and educated in rhythm with their own unique physical,
                         mental and emotional development. Our curriculum is designed to develop your child&#8217;s
-                        capacities for physical well-being, emotional and social depth and creative free thinking.</p>
+                        capacities for physical well-being, social depth and creative free thinking.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
                 <div class="about-content">
                     <i class="fa fa-paint-brush fa-4x"></i>
                     <h3>Arts-Based Learning</h3>
-                    <p>Our teachers infuse academics with singing, painting, handwork, movement, drawing, and musical
-                        instruments. Storytelling, drama, dance and experiential learning are used in place of textbooks
-                        and lectures. The arts are not a separate activity, but a way to better understand other
-                        disciplines.</p>
+                    <p>Our teachers infuse academics with singing, painting, handwork, movement, drawing, musical
+                        instruments, storytelling, drama and dance. The arts are not a separate activity, but interwoven
+                        with instruction as a way to better understand other disciplines.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
