Less row-ing to paddle better on small devices.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
         </div>
     </div>
 </aside>
-<a href="https://www.flickr.com/photos/marylynnjohnson/2442508163/" class="small text-muted pull-right">photo by
+<a href="https://www.flickr.com/photos/marylynnjohnson/2442508163/" class="small text-mutedrow content-row pull-right">photo
+    by
     MaryLynn Johnson&nbsp;</a>
 
 <!-- Services Section -->
@@ -274,7 +275,7 @@
             </div>
         </div>
     </div>
-    <div class="row content-row content-offset">
+    <div class="content-row content-offset">
         <div class="col-md-4 wow fadeIn" data-wow-delay=".2s">
             <div class="media">
                 <div class="pull-left">
@@ -296,7 +297,8 @@
                 <div class="media-body">
                     <h3 class="media-heading">Nature</h3>
                     <p>The natural world and environmental stewardship are integral and expressed through an edible
-                        schoolyard gardening program, integrated &ldquo;natural world&rdquo; curriculum, and eco-conscious
+                        schoolyard gardening program, integrated &ldquo;natural world&rdquo; curriculum, and
+                        eco-conscious
                         schoolwide and classroom practices.</p>
                 </div>
             </div>
@@ -314,7 +316,7 @@
             </div>
         </div>
     </div>
-    <div class="row content-row content-offset">
+    <div class="content-row content-offset">
         <div class="col-md-4 wow fadeIn" data-wow-delay=".6s">
             <div class="media">
                 <div class="pull-left">
@@ -354,7 +356,7 @@
             </div>
         </div>
     </div>
-    <div class="row content-row content-offset">
+    <div class="content-row content-offset">
         <div class="col-md-4 wow fadeIn" data-wow-delay=".6s">
             <div class="media">
                 <div class="pull-left">
@@ -402,33 +404,31 @@
     <div class="container wow fadeIn">
         <h2 class="text-center">Why Waldorf?</h2>
         <hr class="colored">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <p><strong>Waldorf education is the fastest growing independent school movement in the world.</strong>
-                    The modern philosophy behind &ldquo;Waldorf&rdquo; education is based on an innovative school
-                    started in Stuttgart, Germany in 1919 by the Austrian philosopher, scientist, and thinker Rudolf
-                    Steiner. In responding to a request to start a school during the cultural upheaval in Germany
-                    following World War I, Steiner outlined a model for education that has since inspired many schools
-                    called &ldquo;Waldorf&rdquo; after the first Steiner school.</p>
-                <p>At its very inception, the first Waldorf school embraced a sense of equity and social responsibility:
-                    educating boys and girls together, being open to all children, stretching across a wide range of
-                    grades, and involving teachers in school governance. <strong>Underlying all instruction is a
-                        threefold model
-                        of human development, which acknowledges how, in different stages, children grow in their
-                        capacities
-                        to will (meaning move and do), to feel, and to think.</strong> Peace Valley&#8217;s approach to
-                    education
-                    practice is built on this rich Waldorf philosophy and commitment to education for social
-                    renewal.</p>
-                <p>A large body of evidence from the last 20 years of neuroscientific inquiry supports the fundamental
-                    principles of Waldorf education. The timing and organization of brain development are prime
-                    considerations in establishing the optimal sequence for learning, as is the knowledge that the brain
-                    operates optimally when all parts are equally developed, valued, and engaged. The Waldorf methods&#8217;
-                    holistic approach is designed to stimulate optimal brain functioning and follow a developmentally
-                    appropriate sequence to educate the child&#8217;s whole being integrating thinking, feeling, and
-                    doing. <strong>The foundation of Waldorf inspired education lies in providing the right experience
-                        at the right time.</strong></p>
-            </div>
+        <div class="col-md-10 col-md-offset-1">
+            <p><strong>Waldorf education is the fastest growing independent school movement in the world.</strong>
+                The modern philosophy behind &ldquo;Waldorf&rdquo; education is based on an innovative school
+                started in Stuttgart, Germany in 1919 by the Austrian philosopher, scientist, and thinker Rudolf
+                Steiner. In responding to a request to start a school during the cultural upheaval in Germany
+                following World War I, Steiner outlined a model for education that has since inspired many schools
+                called &ldquo;Waldorf&rdquo; after the first Steiner school.</p>
+            <p>At its very inception, the first Waldorf school embraced a sense of equity and social responsibility:
+                educating boys and girls together, being open to all children, stretching across a wide range of
+                grades, and involving teachers in school governance. <strong>Underlying all instruction is a
+                    threefold model
+                    of human development, which acknowledges how, in different stages, children grow in their
+                    capacities
+                    to will (meaning move and do), to feel, and to think.</strong> Peace Valley&#8217;s approach to
+                education
+                practice is built on this rich Waldorf philosophy and commitment to education for social
+                renewal.</p>
+            <p>A large body of evidence from the last 20 years of neuroscientific inquiry supports the fundamental
+                principles of Waldorf education. The timing and organization of brain development are prime
+                considerations in establishing the optimal sequence for learning, as is the knowledge that the brain
+                operates optimally when all parts are equally developed, valued, and engaged. The Waldorf methods&#8217;
+                holistic approach is designed to stimulate optimal brain functioning and follow a developmentally
+                appropriate sequence to educate the child&#8217;s whole being integrating thinking, feeling, and
+                doing. <strong>The foundation of Waldorf inspired education lies in providing the right experience
+                    at the right time.</strong></p>
         </div>
     </div>
     <div class="container wow fadeIn">
@@ -517,7 +517,7 @@
             </div>
         </div>
     </div>
-    <div class="row content-row">
+    <div class="content-row">
         <!-- school Table 1 -->
         <div class="col-md-4">
             <div class="school-item featured-first">
