Populate alt on all images.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     importance of peace, respect, and compassion.</p>
             </div>
             <div class="col-sm-5 text-center">
-                <img src="img/home/Watercolor-by-Megan-Keen.jpg" class="img-responsive img-thumbnail"/>
+                <img src="img/home/Watercolor-by-Megan-Keen.jpg" alt="Watercolor by Megan Keen" class="img-responsive img-thumbnail"/>
                 <div class="caption small text-muted">Watercolor by Megan Keen.</div>
             </div>
         </div>
@@ -271,7 +271,7 @@
                     dignity.</p>
             </div>
             <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="padding:50px 30px;">
-                <img src="img/home/Watercolor-of-Valley.jpg" class="img-responsive img-centered"/>
+                <img src="img/home/Watercolor-of-Valley.jpg" alt="Watercolor of Valley, used with permission of artist." class="img-responsive img-centered"/>
             </div>
         </div>
     </div>
@@ -466,7 +466,7 @@
                                 <div class="testimonial-info">
                                     <div class="testimonial-img">
                                         <img src="img/home/Arthur-Zajonc.jpg" class="img-circle img-responsive"
-                                             alt="">
+                                             alt="Arthor Zajonc">
                                     </div>
                                     <div class="testimonial-author">
                                         <span class="name">Arthur Zajonc, Ph.D.</span>
@@ -488,7 +488,7 @@
                                 <div class="testimonial-info">
                                     <div class="testimonial-img">
                                         <img src="img/home/Joseph-Weizenbaum.png" class="img-circle img-responsive"
-                                             alt="">
+                                             alt="Joseph Weizenbaum">
                                     </div>
                                     <div class="testimonial-author">
                                         <span class="name">Joseph Weizenbaum</span>
