--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 <head>
 
     <meta charset="utf-8">
+    <title>Peace Valley Waldorf Charter School</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description"
           content="Charter School in Boise, Idaho guided by the principles of Waldorf Public Education.">
     <meta name="author" content="Brent Thomas">
 
-    <title>Peace Valley Waldorf Charter School</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#ffffff">
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic"
           rel="stylesheet" type="text/css">
     <link href="fonts/antropos/antropos.css" rel="stylesheet" type="text/css">
