Add FB Open Graph meta.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Peace Valley Waldorf Charter School</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description"
-          content="Charter School in Boise, Idaho guided by the principles of Waldorf Public Education.">
+          content="Art and nature-based school opening in Boise, guided by the principles of Waldorf Public Education.">
     <meta name="author" content="Brent Thomas">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -15,6 +15,13 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:image:height" content="355">
+    <meta property="og:image:width" content="678">
+    <meta property="og:description" content="Art and nature-based school opening in Boise, guided by the principles of Waldorf Public Education.">
+    <meta property="og:title" content="Peace Valley Charter School">
+    <meta property="og:image" content="http://peacevalleycharter.org/img/home/open-graph-preview.jpg">
+    <meta property="og:url" content="peacevalleycharter.org">
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Fonts -->
