Add K Spanish option to Foreign Language highlight.

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     <div class="media-body">
                         <h3 class="media-heading">Foreign Language</h3>
                         <p>Spanish immersion begins for students in the first grade and continues through eighth
-                            grade.</p>
+                            grade. A kindergarten immersion option is available.</p>
                     </div>
                 </div>
             </div>
@@ -544,7 +544,7 @@
                         <li class="list-group-item">Spanish-immersion option</li>
                     </ul>
                     <span>Each child is met with respect, warmth and loving care by a Waldorf-trained teacher and an
-                        assistant</span>
+                        assistant.</span>
                 </div>
             </div>
             <div class="col-md-8">
