Add text to Art-based to fix iPad wrapping.

--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@
                 <div class="about-content">
                     <i class="fa fa-paint-brush fa-4x"></i>
                     <h3>Arts-Based Learning</h3>
-                    <p>Our teachers infuse academics with singing, painting, handwork, movement, drawing, musical
-                        instruments, storytelling, drama and dance. The arts are not a separate activity, but interwoven
-                        with instruction as a way to better understand other disciplines.</p>
+                    <p>Movement and expression fill our school.  Teachers infuse academics with singing, painting,
+                        handwork, movement, drawing, musical instruments, storytelling, drama and dance. The arts are
+                        not a separate activity, but interwoven with instruction as a way to better understand other
+                        disciplines.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
