--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="about-content">
                     <i class="fa fa-paint-brush fa-4x"></i>
                     <h3>Arts-Based Learning</h3>
-                    <p>Movement and expression fill our school.  Teachers infuse academics with singing, painting,
+                    <p>Movement and expression fill our school. Teachers infuse academics with singing, painting,
                         handwork, movement, drawing, musical instruments, storytelling, drama and dance. The arts are
                         not a separate activity, but interwoven with instruction as a way to better understand other
                         disciplines.</p>
@@ -447,7 +447,7 @@
     <div class="container wow fadeIn">
         <hr class="clear">
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/B-ZSeepDmPE?rel=0" frameborder="0"
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/B-ZSeepDmPE?rel=0"
                     allowfullscreen></iframe>
         </div>
         <small>Preparing for Life, a documentary on Waldorf Education</small>
