Update home photo license caption.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 </header>
 <a href="https://www.flickr.com/photos/fandarwin/14107825141/" class="small text-muted pull-right">photo by FanDarwin,
-    licensing requested, awaiting response&nbsp;</a>
+    licensing available for purchase&nbsp;</a>
 
 <!-- About Section -->
 <section id="about">
