Fix document title.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Peace Valley Waldorf Charter School</title>
+    <title>Peace Valley Charter School</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description"
           content="Art and nature-based school opening in Boise, guided by the principles of Waldorf Public Education.">
-    <meta name="author" content="Brent Thomas">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
