--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
         <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
     </div>
 </header>
-<a href="https://www.flickr.com/photos/fandarwin/14107825141/" class="small text-muted pull-right">photo by FanDarwin,
-    licensing available for purchase&nbsp;</a>
+<a href="https://www.flickr.com/photos/fandarwin/14107825141/" class="small text-muted pull-right">photo by FanDarwin on flickr&nbsp;</a>
 
 <!-- About Section -->
 <section id="about">
