--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <!-- Header -->
 <header style="background-image: url('img/home/Boise-Spring-Skyline--Copyright--FanDarwin-on-flickr.jpg');">
     <div class="intro-content">
-        <img src="img/logo.png" class="img-responsive img-centered" alt="Peace Valley Logo">
+        <img src="img/peace-valley-logo.png" class="img-responsive img-centered" alt="Peace Valley Logo">
         <div class="brand-name">Peace Valley</div>
         <hr class="colored">
         <div class="brand-name-subtext">Charter School</div>
