Last minute nits.

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <div class="media-body">
                         <h3 class="media-heading">Limited Technology</h3>
                         <p>Technology is de-emphasized in the early years at school and at home. Parents of enrolled
-                            children will be expected to greatly limit their children’s exposure to computers, TV, and
+                            children are encouraged to greatly limit their children’s exposure to computers, TV, and
                             video games.</p>
                     </div>
                 </div>
@@ -563,7 +563,7 @@
                         <li class="list-group-item">Regular Spanish instruction</li>
                     </ul>
                     <span>Waldorf-trained teachers engage the whole child through a multi-year relationship. As students
-                        move up through the grades, so do teachers from grades 1-5 and from 6-8).</span>
+                        move up through the grades, so do teachers from grades 1-5 and from 6-8.</span>
                 </div>
             </div>
         </div>
