--- a/index.html
+++ b/index.html
@@ -665,7 +665,8 @@
 
 <!-- Button to Donate -->
 <a href="#donateModal" data-toggle="modal"
-   class="btn btn-block btn-full-width"><strong>Donate to our school!</strong></a>
+   class="btn btn-block btn-full-width"><strong><span class="fa fa-gift" aria-hidden="true"></span>
+    Donate to our school!</strong></a>
 
 <!-- Footer -->
 <footer class="footer" style="background-image: url('img/home/Footer-by-Brent-Thomas.jpg')">
@@ -733,7 +734,8 @@
                                 <span class="input-group-btn"><input type="submit" class="btn btn-primary" name="submit" value="Donate!" /></span>
                             </div>
                             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                            <p class="small">You will be redirected to PayPal to complete the donation.</p>
+                            <p class="small"><span class="fa fa-paypal" aria-hidden="true"></span>
+                                You will be redirected to PayPal to complete the donation.</p>
                         </form>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
