--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@
                     </div>
                     <div class="media-body">
                         <h3 class="media-heading">Seasonal Study</h3>
-                        <p>Seasonal studies and festivals are taught and celebrated throughout the year.</p>
+                        <p>Seasonal studies and festivals are taught and celebrated throughout the year.  For example,
+                            Martinmas and the Lantern Walk at the end of Autumn and a Mayfaire to celebrate Spring.</p>
                     </div>
                 </div>
             </div>
