Add Learn more links.

--- a/index.html
+++ b/index.html
@@ -424,15 +424,18 @@
                 following World War I, Steiner outlined a model for education that has since inspired many schools
                 called &ldquo;Waldorf&rdquo; after the first Steiner school.</p>
             <p>At its very inception, the first Waldorf school embraced a sense of equity and social responsibility:
-                educating boys and girls together, being open to all children, stretching across a wide range of
-                grades, and involving teachers in school governance. <strong>Underlying all instruction is a
-                    threefold model
-                    of human development, which acknowledges how, in different stages, children grow in their
-                    capacities
-                    to will (meaning move and do), to feel, and to think.</strong> Peace Valley&#8217;s approach to
-                education
-                practice is built on this rich Waldorf philosophy and commitment to education for social
-                renewal.</p>
+            educating boys and girls together, being open to all children, stretching across a wide range of
+            grades, and involving teachers in school governance. <strong>Underlying all instruction is a
+                threefold model
+                of human development, which acknowledges how, in different stages, children grow in their
+                capacities
+                to will (meaning move and do), to feel, and to think.</strong> Peace Valley&#8217;s approach to
+            education
+            practice is built on this rich Waldorf philosophy and commitment to education for social
+            renewal.</p>
+            </div>
+            <div class="col-md-7 col-md-offset-1">
+
             <p>A large body of evidence from the last 20 years of neuroscientific inquiry supports the fundamental
                 principles of Waldorf education. The timing and organization of brain development are prime
                 considerations in establishing the optimal sequence for learning, as is the knowledge that the brain
@@ -441,6 +444,15 @@
                 appropriate sequence to educate the child&#8217;s whole being integrating thinking, feeling, and
                 doing. <strong>The foundation of Waldorf inspired education lies in providing the right experience
                     at the right time.</strong></p>
+        </div>
+        <div class="col-md-3">
+            <h3>Learn More</h3>
+            <ul>
+                <li><a href="http://allianceforpublicwaldorfeducation.org" title="Visit Alliance for Public Waldorf Education website">Alliance for Public Waldorf Education</a></li>
+                <li><a href="http://waldorfresearchinstitute.org" title="Visit Research Institute for Waldorf Education website">Research Institute for Waldorf Education</a></li>
+                <li><a href="http://waldorflibrary.org" title="Visit Online Waldorf Library website">The Online Waldorf Library</a></li>
+                <li><a href="http://simplicityparenting.com" title="Visit Simplicity Parenting website">Simplicity Parenting</a> by Kim John Payne</li>
+            </ul>
         </div>
     </div>
     <div class="container wow fadeIn">
@@ -613,7 +625,7 @@
             <div class="col-lg-12 text-center">
                 <h2>Contact Us</h2>
                 <hr class="colored">
-                <p>Interested enrolling or helping the school develop? Please get in touch!</p>
+                <p>Interested in enrolling or helping the school develop? Please get in touch!</p>
             </div>
         </div>
         <div class="row content-row">
