Fix fb link to new path.

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
         <div class="row social">
             <div class="col-lg-12">
                 <ul class="list-inline">
-                    <li><a href="https://www.facebook.com/peacevalleycharter" title="Peace Valley Facebook Page"><i
+                    <li><a href="https://www.facebook.com/peacevalleywaldorf" title="Peace Valley Facebook Page"><i
                             class="fa fa-facebook fa-fw fa-2x"></i></a>
                     </li>
                     <li><a href="https://twitter.com/boisewaldorf" title="@boisewaldorf"><i
