Add fb to mailing list section.

--- a/index.html
+++ b/index.html
@@ -608,10 +608,10 @@
 <!-- Newsletter Signup -->
 <section class="cta-form bg-dark">
     <div class="container text-center">
-        <h3>Stay in Touch!
-            <small>Sign up for our updates!</small>
-        </h3>
+        <h3>Stay Connected</h3>
         <hr class="colored">
+        <p><span class="fa fa-facebook-square" aria-hidden="true"></span> Follow <a href="https://www.facebook.com/peacevalleywaldorf" title="Our Facebook Page">Peace Valley Charter School</a> on facebook for regular updates!</p>
+        <p><span class="fa fa-envelope" aria-hidden="true"></span> Or for more infrequent updates sign up for our mailing list.</p>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <!-- MailChimp Signup Form -->
