Add proposed school pending approval.

--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
                 <h2>Prospective Parents</h2>
                 <hr class="colored">
                 <p>Peace Valley Charter School is anticipated to open as a free public school in the autumn of 2018.
-                    We will initially be offering enrollment in grades K-6. Additional middle school grades will be
-                    added each year until we offer full K-8 education.</p>
+                    We are a proposed school pending approval initially offering enrollment in grades K-6. Middle school
+                    grades will be added each year until we offer full K-8 education.</p>
             </div>
         </div>
         <div class="content-row">
